# JumpAndRun

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  main.c  main.cpp
assets/character/: character_data.json  death_data.json
assets/shader/: character.json  platform.json  platform_fragment.glsl  platform_vertex.glsl  primitive.json  primitive_fragment.glsl  primitive_vertex.glsl  sprite.json  sprite_fragment.glsl  sprite_vertex.glsl
assets/sprites/tiles/: spritesheet.json  texture.json
include/: game.h  physics.h  player.h
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/shader/: character_fragment.glsl  character_vertex.glsl  platform_vertex.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  config.cpp  config.h  game.c  game.cpp  game.h  level.cpp  level.h  leveleditor.cpp  leveleditor.h  main.cpp  mixed.h  physics.cpp  physics.h  player.cpp  player.h  service.h
src/editor/: editmode.cpp  editmode.h  editormath.h  keyhelper.cpp  keyhelper.h
src/gui/: guihelper.cpp  guihelper.h
src/opengl/: buffer.cpp  buffer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/rendering/: camera.cpp  camera.h  creature_renderer.cpp  creature_renderer.h  levelrenderer.cpp  levelrenderer.h  primitiverenderer.cpp  primitiverenderer.h
src/rendering/formats/: spritesheet.cpp  spritesheet.h
src/rendering/opengl/: buffer.cpp  buffer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/schemes/: CMakeLists.txt  level.fbs
src/util/: config.cpp  config.h  filesystem.cpp  filesystem.h  guihelper.cpp  guihelper.h  mixedmath.h  noncopyable.h  undobuffer.h  window.h
